[package]
name = "lru-cache"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
serde = "1.0"
serde_json = "1.0"
lru = "0.6.5"
rusoto_core = "0.46.0"
rusoto_s3 = "0.46.0"
rusoto_lambda = "0.46.0"
zip = "0.5"